--------------------------------------------------------------------------------
Fusion 1.209 - January ??, 2004
--------------------------------------------------------------------------------
- 01-22-04: Fixed 2HQ Effect doesn't wear off with weapon change. [AlexKreuz]
- 01-22-04: Fixed NPC Jobchange didn't reset options bug. [AlexKreuz]
- 01-22-04: Added hidden warp support [Colus]
- 01-22-04: Corrected Snatching with bow weapons [Colus]
- 01-22-04: Fixed dead char gains party share exp bug. [AlexKreuz]
- 01-22-04: Fixed Monk Spirit Recovery timing for SP. [AlexKreuz]
- 01-22-04: Fixed "Please equip arrow first" bug. [AlexKreuz]
- 01-22-04: Fixed #server gives wrong version number. [AlexKreuz]
- 01-22-04: Updated Lord of Vermillion / Storm Gust calculations. [AlexKreuz]
- 01-22-04: Fixed Character deletion in slots 4/5 bug. [AlexKreuz]
- 01-22-04: Updated spirit sphere usage and display [Colus]
- 01-22-04: Fixed bug #208 for scripts as well [Colus]
- 01-22-04: Fixed problem with #warp (bug #208) [Colus]
- 01-21-04: Updated Graphics for Chemical protection Alchemist -[Oatmeal]
- 01-21-04: Added steal coin graphics when success-[Oatmeal]
- 01-21-04: Added venom splasher (still needs work after death splash posion effect)-[Oatmeal]
- 01-20-04: Updated Talkie Box/Graffiti [Colus]
- 01-20-04: Updated SetSkillUnit [Colus]
- 01-19-04: Upgraded to new view packets [Colus]
- 01-18-04: Updated Pharmacy [Colus]
- 01-18-04: Fixed unhide consuming SP [Colus]
- 01-18-04: Fixed monster looting more than 10 items bug. Items disappear. [AlexKreuz]
- 01-18-04: Updated Sanctuary/Apple of Idun effects [Colus]
- 01-18-04: Updated item creation packets for forging/Pharmacy [Colus]
- 01-17-04: SearchPath Algorithm v2.0 - 37%-87% performance increase over original. [AlexKreuz]
- 01-16-04: Fixed weapon requirements/error displays for some skills [Colus]
- 01-16-04: Updated error return values [Colus]
- 01-16-04: New SendSkillError function (supercedes SendItemError) [Colus]